maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: type List takes type parameters
def getBaggleCoords():List = {
                      ^ShortestPathMaze:2: error: type List takes type parameters
def getBaggleCoords():List = {
                      ^